# gnome-activities

./: .gitignore  Makefile  README.md  gnome-activities.desktop  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: ci.yml  release.yml
.pybuild/cpython3_3.12/: gnome_activities-0.1.0-py3-none-any.whl
daemon/: gnome-activities.service  pyproject.toml
daemon/gnome_activities/: __init__.py  __main__.py  activity_manager.py  app_launcher.py  cli.py  dbus_service.py  models.py  storage.py
daemon/tests/e2e/: test_workflow.py
daemon/tests/integration/: test_cli.py
daemon/tests/security/: test_security.py
daemon/tests/unit/: test_activity_manager.py  test_models.py  test_storage.py
docs/developer/: README.md  architecture.md  building.md  contributing.md
docs/user/: README.md  firefox-extension.md  installation.md  keybindings.md  usage.md
firefox-extension/: background.js  manifest.json
firefox-extension/native/: manifest.json  native_host.py
firefox-extension/native-messaging/: gnome_activities_host.py  org.gnome.activities.json
firefox-extension/popup/: popup.html  popup.js
gnome-extension/: extension.js  metadata.json  stylesheet.css
gnome_activities/: __init__.py
gnome_activities/cli/: __init__.py  main.py
gnome_activities/core/: __init__.py  activity.py  launcher.py  manager.py  storage.py  tracker.py
gnome_activities/daemon/: __init__.py  monitor.py  service.py
packaging/: build-deb.sh
packaging/debian/: changelog  control  debhelper-build-stamp  files  gnome-activities.postinst.debhelper  gnome-activities.postrm.debhelper  gnome-activities.prerm.debhelper  gnome-activities.service  gnome-activities.substvars  install  rules
packaging/debian/gnome-activities/DEBIAN/: control  md5sums  postinst  postrm  prerm
packaging/debian/gnome-activities/usr/share/python3/runtime.d/: gnome-activities.rtupdate
tests/: conftest.py
tests/e2e/: test_cli.py
tests/integration/: test_manager_storage.py
tests/security/: test_security.py
tests/unit/: test_activity.py  test_launcher.py  test_manager.py  test_storage.py  test_tracker.py
