[metadata]
name = gnome-activities
version = 0.1.0
description = KDE-like activities manager for GNOME
long_description = file: README.md
long_description_content_type = text/markdown
author = GNOME Activities Contributors
url = https://github.com/gortazar/gnome-activities
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.9
install_requires =
    click>=8.0

[options.entry_points]
console_scripts =
    gnome-activities = gnome_activities.cli.main:main

[options.extras_require]
dbus =
    dbus-python
dev =
    pytest>=7.0
    pytest-cov>=4.0
    black>=23.0
    flake8>=6.0
    bandit>=1.7

[flake8]
max-line-length = 120
extend-ignore = E203,W503
exclude = .git,__pycache__,build,dist,*.egg-info
