[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnome-activities"
version = "0.1.0"
description = "KDE-like activities manager for GNOME"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "bandit>=1.7",
    "flake8>=6.0",
]

[project.scripts]
gnome-activities = "gnome_activities.cli:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["gnome_activities"]
